@@ -1,11 +1,7 @@
 Left TODO:
 
- * Find initial theme, and if it's a custom metatheme keep it around to put
-   in the list when selecting a different theme.
-
- * Change custom theme removal addition to handle above.
-
  * Change custom theme text to indicate what themes are being used.
+   - requires breaking string freeze
 
  * Notice when a directory is removed.
 
