@@ -1,3 +1,10 @@
+Wed Jan  8 01:57:09 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c (add_initial_row_to_meta_theme): handle
+	initial theme as custom.
+
+	* TODO: update
+
 Tue Jan  7 03:10:36 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-theme-save.c (save_dialog_response): add a description
